# Automation-Business

./: CLAUDE.md  PLAN.md  README.md
agents/agent-evaluator/: .env.example  Procfile  pyproject.toml
agents/buyer-simple-agent/: .env.example  Dockerfile.apprunner  README.md  apprunner.yaml  supabase-task-comparisons.sql
agents/creative-gen-agent/: .env.example  Dockerfile  pyproject.toml
agents/creative-gen-agent/deploy/: README.md  creative-gen-agent.service  ec2-bootstrap.sh  nginx-creative-gen-agent.conf
agents/creative-gen-agent/src/: agent.py  agent_a2a.py  agent_a2a_agentcore.py  agent_agentcore.py  analytics.py  client.py  demo.py  gemini_utils.py  observability.py  openai_utils.py  pricing.py  storage.py  strands_agent.py  strands_agent_plain.py
agents/creative-gen-agent/src/tools/: ad_copy.py  branding.py  landing_page.py
agents/creative-gen-agent/tmp/: inboxpilot-preview-gemini.html  inboxpilot-preview.html
agents/creative-gen-agent/tmp/generated-pages/: inboxpilot-landing-page.html
agents/crypto-market-agent/: .env.example  pyproject.toml
agents/crypto-market-agent/src/: agent.py  agent_a2a.py  analytics.py  client.py  log.py  observability.py  pricing.py  strands_agent.py  strands_agent_plain.py
agents/crypto-market-agent/src/tools/: defi_report.py  market_analysis.py  price_check.py
agents/seller-simple-agent/: README.md
agents/web-scraper-agent/: .env.example  pyproject.toml  railway.toml
demo/openclaw-docker/: CLAUDE.md  Dockerfile  README.md  TOOLS.md  docker-compose.yml  entrypoint.sh  nevermined-plugin.tgz  openclaw.json
dev-logs/: 2026-03-05.md
workshops/deploy-aws/: .env.example  (+1 more)
(+52 files in other folders)
